<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Main</string>
    <string name="food_planner">Food Planner</string>
    <string name="sign_in">Sign In With gmail</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="guest">Continue as a Guest?</string>
    <string name="email">Email</string>
    <string name="your_name">Your name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="desc">Save delicious recipes and get various content</string>
    <string name="sign_up">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="welcome">Welcome back! you\'re a tap away from something delicious</string>
    <string name="forget_password">Forget password?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="calendar">Calendar</string>
    <string name="personal">Personal</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="logout">LogOut</string>
    <string name="categories">Categories</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="countries">Countries</string>
    <string name="ingredients">Ingredients</string>
    <string name="allow_internet_access">Allow Internet Access</string>
    <string name="all_meals">All Meals</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="full_name">Full Name</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="default_web_client_id">252505979530-cc10lun140d8jtf1mujp1h3h1kt6a8ma.apps.googleusercontent.com</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="instructions">Instructions</string>
    <string name="name">Name</string>
    <string name="meal_name">Meal Name</string>
    <string name="remove_meal">remove_meal</string>
    <string name="more">More...</string>
    <string name="welcome1">Welcome</string>

</resources>