<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/search"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/calendar"
        android:title="@string/calendar"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/logout"/>
</menu>